--- a/app/templates/client.html
+++ b/app/templates/client.html
@@ -29,7 +29,7 @@
         </div>
 
         <div id="phone-input" class="card" style="display: none;">
-            <p style="color: red;">Please enter a valid phone number</p>
+            <p style="color: red; display: none;" id="validNumber">Please enter a valid phone number</p>
             <h2>Enter Your Phone Number</h2>
             <input type="tel" id="phoneNumber" placeholder="+250 7XX XXX XXX" class="input-field">
             <button onclick="joinQueue()" class="btn btn-primary">Get Ticket</button>
