--- a/app/templates/staff_login.html
+++ b/app/templates/staff_login.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Staff Login - SmartQ</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <!-- <link rel="stylesheet" href="../static/css/style.css"> -->
 </head>
 <body>
     <div class="container">
         <div class="login-card">
+            <i class="fa-solid fa-arrow-left" onclick="goBackstaff()"></i>
+            <!-- <button " class="" title="Back"> </button> -->
             <h1>Staff Login</h1>
             <form id="loginForm">
                 <input type="text" id="username" placeholder="Username" class="input-field" required>
@@ -45,6 +48,9 @@
                 document.getElementById('error').textContent = 'Login failed';
             }
         });
+    function goBackstaff() {
+        window.location.href = '/';
+    }
     </script>
 </body>
 </html>
